Fixed overlap

--- a/src/tutorial/projects/Reviews.css
+++ b/src/tutorial/projects/Reviews.css
@@ -5,10 +5,18 @@
   align-items: center;
   margin-top: 2em;
 }
+ 
+.underline {
+  width: 70px;
+  height: 5px;
+  background:  #49a6e9;
+  margin: 0 auto;
+  border-radius: 5px;
+}
 
 .info-container {
   width: 45em;
-  height: 30em;
+  height: 32em;
   background: white;
   border-radius: 5px;
   box-shadow: 1px 2px 15px rgba(140, 140, 150, 0.2);
@@ -16,8 +24,10 @@
 }
 
 .img {
-  width: 150px;
-  height: 150px;
+  /* width: 150px;
+  height: 150px; */
+  width: 28% ;
+  height: 40% ; 
   border-radius:50%;
 }
 
